# CEDICA_WebPage

./: .gitignore  README.md  main.py  package-lock.json  tailwind.config.js
admin/: .gitignore  app.py  pyproject.toml
admin/src/core/: bcrypt.py  board.py  database.py  oauth.py  seeds.py
admin/src/core/auth/: __init__.py  rol.py  user.py
admin/src/core/board/: __init__.py  issue.py  label.py
admin/src/core/cobros/: __init__.py  cobro.py
admin/src/core/contacto/: __init__.py  contacto.py
admin/src/core/encuestre/: __init__.py  documento_encuestre.py  encuestre.py
admin/src/core/encuestre_empleado/: __init__.py  encuestres_empleados.py
admin/src/core/equipo/: __init__.py  documento.py  empleado.py
admin/src/core/jinetes_amazonas/: __init__.py  documento_jinete.py  jinetes_amazonas.py
admin/src/core/permiso/: __init__.py  permiso.py
admin/src/core/publicacion/: __init__.py  publicacion.py
admin/src/core/registro_pagos/: __init__.py  pago.py
admin/src/core/rol_permiso/: __init__.py  __initi__.py  permisos_roles.py
admin/src/web/: __init__.py  helpers.py  storage.py
admin/src/web/api/: contacto.py  publicaciones.py
admin/src/web/controllers/: auth.py  cobros.py  contacto.py  documentos.py  encuestres.py  equipo.py  issues.py  jinetes_amazonas.py  pagos.py  publicaciones.py  reportes.py  users.py  validador.py
admin/src/web/handlers/: auth.py  error.py
admin/src/web/schemas/: contacto.py  (+1 more)
admin/static/: error.css  output.css  style.css
admin/static/funcionalidad/: navbar.js  script_informacion_general.js
admin/tests/: test_home.py
(+61 files in other folders)
