[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = [
    "MATIAS DURAN <matiduran03@gmail.com~>",
    "FRANCISCO DIAZ MALBRAN <fdmalbran@alu.ing.unlp.edu.ar~>",
    "LAUTARO FRANCISCO BLEIZ <lautaro.bleiz77@gmail.com~>",
]
readme = "README.md"
packages = [{ include = "web", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
