[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = [
    "MATIAS DURAN <matiduran03@gmail.com~>",
    "FRANCISCO DIAZ MALBRAN <fdmalbran@alu.ing.unlp.edu.ar~>",
    "LAUTARO FRANCISCO BLEIZ <lautaro.bleiz77@gmail.com~>",
    "PACO LOVERA <pacolovera29@gmail.com~>"
]
readme = "README.md"
packages = [{ include = "web", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-session = "^0.8.0"
flask-bcrypt = "^1.0.1"
minio = "^7.2.9"
marshmallow = "^3.23.1"
flask-cors = "^5.0.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
